@@ -1,3 +1,4 @@
+  * Add AArch64 instruction csel
 7.45
   * New ARMv8 model
   * klitmus tool
